--- a/config/database.yml
+++ b/config/database.yml
@@ -10,10 +10,12 @@ development:
   <<: *default
   database: DevFinder_development
 
-test:
+test: &test
   <<: *default
   database: DevFinder_test
 
 production:
   <<: *default
   database: DevFinder_production
+cucumber:
+  <<: *test
