--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,11 @@ services:
     volumes:
       - box:/box
 
-  mailcatcher:
-    image: tophfr/mailcatcher
-    ports:
-      - 1025:25
-      - 1080:80
+  # mailcatcher:
+  #   image: tophfr/mailcatcher
+  #   ports:
+  #     - 1025:25
+  #     - 1080:80
 
 volumes:
   postgres:
